--- a/js_reaction_tester.html
+++ b/js_reaction_tester.html
@@ -10,14 +10,20 @@
     </head>
 
     <body>
-		
-		<h1>Test Your Reactions!</h1>
-		<p>Click on the boxes and circles as quickly as you can!</p>
-		<p class="bold" >It took you: <span id="timeTaken"></span> </p>
+
+	<div id="container">
+
+		<h1 id="heading">Test Your Reactions!</h1>
+		<p id="para" >Click on the boxes and circles as quickly as you can!</p>
+		<p class="bold" >It took you : <span id="timeTaken"></span> </p>
+	</div>
 		
 		<div id="shape"></div>
-		
+	
+
 		<script type="text/javascript" src="script.js"></script>
+
+
 		
     </body>
 	
